--- a/TravelCompanyApiGateway.properties
+++ b/TravelCompanyApiGateway.properties
@@ -1,4 +1,8 @@
 
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+eureka.client.instance.preferIpAddress=true
+
 spring.main.web-application-type=reactive
 
 spring.cloud.gateway.routes[0].id=TravelCompanyEmployeeData
