--- a/TravelCompanyEmployeeData.properties
+++ b/TravelCompanyEmployeeData.properties
@@ -1,5 +1,5 @@
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-
+server.port=9101
 eureka.client.instance.preferIpAddress=true
 
 spring.jpa.hibernate.ddl-auto=update
