--- a/TravelCompanyApiGateway.properties
+++ b/TravelCompanyApiGateway.properties
@@ -1,6 +1,8 @@
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
+server.port=9100
+
 eureka.client.instance.preferIpAddress=true
 
 spring.main.web-application-type=reactive
