--- a/TravelCompanyApiGateway.properties
+++ b/TravelCompanyApiGateway.properties
@@ -10,3 +10,7 @@ spring.main.web-application-type=reactive
 spring.cloud.gateway.routes[0].id=TravelCompanyEmployeeData
 spring.cloud.gateway.routes[0].uri=http://localhost:9101
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/employee/**
+
+spring.cloud.gateway.routes[1].id=TravelCompanyVehicleData
+spring.cloud.gateway.routes[1].uri=http://localhost:9102
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/v1/vehicle/**
