--- a/TravelCompanyVehicleData.properties
+++ b/TravelCompanyVehicleData.properties
@@ -4,6 +4,8 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 eureka.client.instance.preferIpAddress=true
 
+spring.jpa.hibernate.ddl-auto=update
+
 spring.datasource.url=jdbc:mysql://localhost:3306/travelcompany1stoct
 spring.datasource.username=root
 spring.datasource.password=Gaya@9934023936
